objects/CS_Basket_Snapshot_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>Cleanup_Process__c</fullName>
        <description>In Transaction or In Batch</description>
        <label>Cleanup Process</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Output_Strategy__c</fullName>
        <description>Attribute or Product Configuration</description>
        <label>Output Strategy</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Use_Field_Type_Conversion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines will output value be converted to target field type</description>
        <label>Use Field Type Conversion</label>
        <type>Checkbox</type>
    </fields>
    <label>CS Basket Snapshot Settings</label>
</CustomObject>